<resources>
    <string name="app_name">Test Weather Appcilation</string>
    <string name="longitude">Долгота</string>
    <string name="latitude">Широта</string>
    <string name="input_coordinates">Введите координаты</string>
    <string name="get_weather_by_coordinates">Показать погоду по координатам</string>
    <string name="check_cities">Посмотреть города</string>
    <string name="tokyo">Токио</string>
    <string name="rostov">Ростов</string>
    <string name="abinsk">Абинск</string>
    <string name="get_weather_around">Показать погоду вокруг меня</string>
    <string name="message_location_permission_requirement">Для отображения погоды вокруг требуется разрешение определения местороложения</string>
    <string name="wrong_coordinates">Неверные координаты</string>
    <string name="location_not_idetified">Локация не определена</string>
    <string name="location_access_denied">Использование геолокации запрещено</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="gps_turn_on">Пожалуйста, включите службу определение местоположения (GPS)</string>
    <string name="pressure">Давление %d мм.рт.ст.</string>
    <string name="humidity">Влажность %d %%</string>
    <string name="wind">Ветер %1s %2$.1f м/с</string>
    <string name="feels_like">Ощущается как %d°</string>
    <string name="actual_time_and_yesterday_temp">Сейчас %1$s. Вчера в это время %2$s°</string>
    <string name="condition_icon_link">https://yastatic.net/weather/i/icons/funky/dark/%1$s.svg</string>
    <string name="today">Сегодня</string>

    <string name="clear">Ясно</string>
    <string name="partlyCloudy">Малооблачно</string>
    <string name="cloudy">Облачно с прояснениями</string>
    <string name="overcast">Пасмурно</string>
    <string name="drizzle">Морось</string>
    <string name="lightRain">Небольшой дождь</string>
    <string name="rain">Дождь</string>
    <string name="moderateRain">Умеренно сильный дождь</string>
    <string name="heavyRain">Сильный дождь</string>
    <string name="continuousHeavyRain">Длительный сильный дождь</string>
    <string name="showers">Ливень</string>
    <string name="wetSnow">Дождь со снегом</string>
    <string name="lightSnow">Небольшой снег</string>
    <string name="snow">Снег</string>
    <string name="snowShowers">Снегопад</string>
    <string name="hail">Град</string>
    <string name="thunderstorm">Гроза</string>
    <string name="thunderstormWithRain">Дождь с грозой</string>
    <string name="thunderstormWithHail">Гроза с градом</string>
    <string name="undefined">Не определено</string>

    <string name="nw">cеверо-западный</string>
    <string name="n">северный</string>
    <string name="ne">северо-восточный</string>
    <string name="e">восточный</string>
    <string name="sw">юго-западный</string>
    <string name="s">южный</string>
    <string name="se">юго-восточный</string>
    <string name="w">западный</string>
    <string name="c">штиль</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="retry">Повторить</string>
    <string name="error_message_network">Ошибка сети. Проверьте подключение.</string>
</resources>