<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Район, город"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_actual_time_and_yesterday_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp"
                android:text="сейчас время. вчера в это время темп"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/text_actual_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+15"
                    android:textSize="48sp" />


                <ImageView
                    android:id="@+id/image_condition"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Облачно"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ощущается "
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="wind"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="humidity"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="pressure"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGetWeatherAround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_weather_around"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_coordinates" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_latitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="latitudeCoordinate"
                    android:background="@drawable/border"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal"
                    android:textColorHint="#80000000" />

                <EditText
                    android:id="@+id/edit_longitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:autofillHints="longitudeCoordinate"
                    android:background="@drawable/border"
                    android:hint="@string/longitude"
                    android:inputType="numberDecimal"
                    android:textColorHint="#80000000" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_get_weather_by_coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_weather_by_coordinates" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_cities" />

            <Button
                android:id="@+id/btn_tokyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tokyo" />

            <Button
                android:id="@+id/btn_ottawa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ottawa" />

            <Button
                android:id="@+id/btn_kigali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kigali" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>



